deploy/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohorizons-tasks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ohorizons-tasks-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ohorizons-tasks-api
    spec:
      containers:
        - name: api
          image: ohorizons-tasks-api-ms:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
