deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohorizons-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ohorizons-ms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ohorizons-ms
    spec:
      containers:
        - name: spa
          image: ohorizons-ms:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
