deploy/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohorizons-tasks-api
spec:
  selector:
    app.kubernetes.io/name: ohorizons-tasks-api
  ports:
    - name: http
      port: 3000
      targetPort: http
